--- a/project-kavling12.html
+++ b/project-kavling12.html
@@ -174,7 +174,7 @@
 
         <!-- Day/Night Switcher Button (VERTICAL RIGHT with Sliding Knob) -->
         <div id="hero-switch-container"
-            class="hero-switcher absolute top-1/2 right-4 md:right-8 -translate-y-1/2 z-30 pointer-events-auto flex items-center gap-4 transition-transform duration-300">
+            class="hero-switcher absolute top-1/2 right-[6%] md:right-[5%] 2xl:right-[7.5%] -translate-y-1/2 z-30 pointer-events-auto flex items-center gap-4 transition-transform duration-300">
 
             <!-- Tooltip "Try Me" -->
             <div
