--- a/project-kampusjati.html
+++ b/project-kampusjati.html
@@ -4,21 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kavling 12 | KEND.DESIGN.STUDIO</title>
+    <title>Kampus Jati | KEND.DESIGN.STUDIO</title>
     <meta name="description"
-        content="Kavling 12 - Modern Tropical Residential Project in Batam, Indonesia. A 180 sq m home designed to breathe and evolve with you.">
+        content="Kampus Jati - Modern Commercial Project in Padang, Indonesia. A space designed for productivity and community.">
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Kavling 12 | KEND.DESIGN.STUDIO">
-    <meta property="og:description" content="Modern Tropical residential design in Batam, Indonesia - 180 sq m.">
+    <meta property="og:title" content="Kampus Jati | KEND.DESIGN.STUDIO">
+    <meta property="og:description" content="Modern Commercial design in Padang, Indonesia.">
     <meta property="og:image" content="https://kndrckm.github.io/assets/projects/kavling12_1.webp">
-    <meta property="og:url" content="https://kndrckm.github.io/project-kavling12.html">
+    <meta property="og:url" content="https://kndrckm.github.io/project-kampusjati.html">
     <meta property="og:type" content="article">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Kavling 12 | KEND.DESIGN.STUDIO">
-    <meta name="twitter:description" content="Modern Tropical residential design in Batam, Indonesia.">
+    <meta name="twitter:title" content="Kampus Jati | KEND.DESIGN.STUDIO">
+    <meta name="twitter:description" content="Modern Commercial design in Padang, Indonesia.">
     <meta name="twitter:image" content="https://kndrckm.github.io/assets/projects/kavling12_1.webp">
 
     <!-- JSON-LD Structured Data -->
@@ -26,14 +26,14 @@
     {
         "@context": "https://schema.org",
         "@type": "CreativeWork",
-        "name": "Kavling 12",
-        "description": "Modern Tropical residential project in Batam, Indonesia",
+        "name": "Kampus Jati",
+        "description": "Modern Commercial project in Padang, Indonesia",
         "creator": {
             "@type": "Person",
             "name": "Kendrick Marzuki"
         },
         "dateCreated": "2025",
-        "locationCreated": "Batam, Indonesia"
+        "locationCreated": "Padang, Indonesia"
     }
     </script>
 
@@ -263,7 +263,7 @@
             <!-- Mobile: 88/96 = 91.66% | Desktop: 90/96 = 93.75% | Large: 85/96 = 88.54% -->
             <div class="w-[91.66%] md:w-[93.75%] 2xl:w-[88.54%] max-w-[1800px] mx-auto">
                 <h1 class="text-[10vw] md:text-[6.5vw] font-black text-white tracking-tighter leading-none reveal-text">
-                    Kavling <span class="text-white/80">12</span>
+                    Kampus <span class="text-white/80">Jati</span>
                 </h1>
             </div>
         </div>
@@ -277,7 +277,7 @@
             <li><a href="index.html#portfolio" class="text-secondary hover:text-accent transition-colors">Projects</a>
             </li>
             <li><span class="text-secondary/50">/</span></li>
-            <li class="text-primary font-bold">Kavling 12</li>
+            <li class="text-primary font-bold">Kampus Jati</li>
         </ol>
     </nav>
 
@@ -291,7 +291,7 @@
                 <div>
                     <span class="block text-[10px] font-bold text-accent uppercase tracking-widest mb-2">Area
                         Size</span>
-                    <h4 class="text-lg font-bold text-primary">180 sq m</h4>
+                    <h4 class="text-lg font-bold text-primary">550 sq m</h4>
                 </div>
                 <div>
                     <span class="block text-[10px] font-bold text-accent uppercase tracking-widest mb-2">Year</span>
@@ -299,7 +299,7 @@
                 </div>
                 <div>
                     <span class="block text-[10px] font-bold text-accent uppercase tracking-widest mb-2">Style</span>
-                    <h4 class="text-lg font-bold text-primary">Modern Tropical</h4>
+                    <h4 class="text-lg font-bold text-primary">Modern Commercial</h4>
                 </div>
             </div>
 
@@ -308,31 +308,31 @@
                 <div class="md:col-span-4">
                     <h3 class="text-2xl font-black text-primary mb-4 tracking-tight">Design Philosophy</h3>
                     <p class="text-secondary text-sm leading-relaxed mb-8">
-                        Kavling 12 is envisioned as a blank canvas—a structural framework that allows users the freedom
-                        to express themselves through material and color.
+                        Kampus Jati is conceived as a dynamic hub—a convergence of commerce and community that fosters
+                        interaction and productivity.
                     </p>
                     <div class="bg-white/50 border border-white/50 rounded-2xl p-4 flex items-center gap-4">
                         <div class="bg-white p-2.5 rounded-xl text-accent shadow-sm">
-                            <i data-lucide="wind" class="w-5 h-5"></i>
+                            <i data-lucide="users" class="w-5 h-5"></i>
                         </div>
                         <div>
-                            <span class="block text-xs font-bold text-primary">Passive Design</span>
-                            <span class="text-[11px] text-secondary">Optimized Air & Light</span>
+                            <span class="block text-xs font-bold text-primary">Community Centric</span>
+                            <span class="text-[11px] text-secondary">Designed for Interaction</span>
                         </div>
                     </div>
                 </div>
                 <div class="md:col-span-8">
                     <h2 class="text-2xl md:text-4xl font-bold text-accent mb-6 leading-tight">
-                        "A home designed to breathe and evolve with you."
+                        "A space that catalyzes growth and connection."
                     </h2>
                     <p class="text-secondary leading-relaxed mb-6">
-                        Beyond its flexible aesthetic, the core strength of Kavling 12 lies in its performance. The
-                        massing is strategically carved to capture prevailing winds and filter natural sunlight deep
-                        into the living spaces.
+                        Beyond its functional layout, the core strength of Kampus Jati lies in its adaptability. The
+                        architecture is designed to accommodate evolving business needs while maintaining a strong
+                        visual identity.
                     </p>
                     <p class="text-secondary leading-relaxed">
-                        This approach ensures that while the facade remains an adaptable canvas for the owner's taste,
-                        the comfort and energy efficiency of the home remain absolute and timeless.
+                        This approach ensures that the space remains relevant and engaging, providing a solid foundation
+                        for businesses to thrive and communities to connect.
                     </p>
                 </div>
             </div>
