--- a/valentine/index.html
+++ b/valentine/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valentine Invitation for Monica Theresa Ken Ratri Drupadi</title>
+    <title>Valentine Invitation for Monica Teresa Ken Ratri Drupadi</title>
     <!-- Cinematic & Romantic Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
