--- a/valentine/index.html
+++ b/valentine/index.html
@@ -55,6 +55,12 @@
 
             <!-- Survey Container (Hidden by default) -->
             <div id="survey-container" class="hidden">
+                <div class="progress-container"
+                    style="width: 100%; background: #eee; height: 6px; border-radius: 3px; margin-bottom: 20px;">
+                    <div id="progress-bar"
+                        style="width: 0%; height: 100%; background: #8a3b3b; border-radius: 3px; transition: width 0.3s ease;">
+                    </div>
+                </div>
                 <div class="survey-card animate-fade-in-up">
                     <h2 id="question-text">Question 1</h2>
                     <div id="options-container" class="options-grid">
